# darml-core

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  USAGE.md  pyproject.toml
.github/workflows/: example-build-pro.yml  example-build.yml
darml/: __init__.py  __main__.py  config.py  container.py  free_tier.py  plugins.py
darml/application/factories/: builder_factory.py  parser_factory.py  quantizer_factory.py
darml/application/pipeline/: context.py  pipeline.py  step.py
darml/application/pipeline/steps/: check_step.py  compile_step.py  convert_step.py  package_step.py  parse_step.py  quantize_step.py
darml/application/ports/: api_key_store.py  build_cache.py  build_repository.py  converter.py  email_delivery.py  file_storage.py  firmware_builder.py  flasher.py  model_parser.py  progress_reporter.py  quantizer.py  rate_limiter.py
darml/application/use_cases/: build_firmware.py  check_size.py  flash_device.py  get_build_status.py  list_targets.py  parse_model.py
darml/domain/: api_key.py  enums.py  exceptions.py  models.py  targets.py
darml/infrastructure/builders/: avr_builder.py  base_builder.py  esp32_builder.py  jetson_builder.py  nrf52840_builder.py  platformio_builder.py  rp2040_builder.py  rpi_builder.py  stm32_builder.py
darml/infrastructure/converters/: _sklearn_to_c_subprocess.py  sklearn_to_c.py
darml/infrastructure/flash_docs/: __init__.py
darml/infrastructure/flashers/: esptool_flasher.py
darml/infrastructure/parsers/: _sklearn_subprocess.py  onnx_parser.py  sklearn_parser.py  tflite_parser.py
darml/infrastructure/persistence/: in_memory_build_repo.py  sqlite_build_repo.py
darml/infrastructure/platformio/: platformio_runner.py
darml/infrastructure/reporting/: composite_reporter.py  log_reporter.py
darml/infrastructure/storage/: filesystem_storage.py
darml/infrastructure/templates/avr/: platformio.ini
darml/infrastructure/templates/avr/lib/darml/: darml.h
darml/infrastructure/templates/avr/src/: main.cpp
darml/infrastructure/templates/esp32/: platformio.ini
darml/infrastructure/templates/esp32/lib/darml/: darml.cpp  darml.h
darml/infrastructure/templates/esp32/src/: main.cpp
darml/infrastructure/templates/jetson/: Dockerfile  inference.py
darml/infrastructure/templates/nrf52840/: platformio.ini
darml/infrastructure/templates/nrf52840/src/: main.cpp
darml/infrastructure/templates/rp2040/: platformio.ini
darml/infrastructure/templates/rp2040/lib/darml/: darml.cpp
darml/infrastructure/templates/rpi/: Dockerfile  inference.py  requirements.txt  run.sh
darml/infrastructure/templates/stm32/: platformio.ini
darml/infrastructure/templates/stm32/lib/darml/: darml.h
darml/interfaces/cli/: main.py
docs/: pro_targets.md  workspaces.md
examples/: esp32_demo.py  iris_avr_demo.py  onnx_rpi_demo.py  realmodel_builds.py  realmodel_matrix.py  stm32_demo.py
landing/: index.html
landing/billing/cancel/: index.html
landing/billing/success/: index.html
tests/: conftest.py  test_arena_cap.py  test_build_timeout.py  test_check_size.py  test_container_wiring.py  test_factories.py  test_free_tier.py  test_in_memory_repo.py  test_list_targets.py  test_onnx_external_data.py  test_parse_model.py  test_pipeline.py  test_template_rendering.py  test_toolchain_missing.py
tests/fixtures/: make_real_models.py  make_tflite.py
tests/inference/: test_python_inference.py
tests/security/: test_path_traversal.py  test_pickle_sandbox.py  test_template_injection.py  test_wheel_purity.py
