[project]
name = "darml"
version = "0.1.2"
description = "Model-to-firmware compiler for edge AI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Darml Contributors" },
]
keywords = ["edge-ai", "tinyml", "firmware", "tflite", "onnx", "esp32", "stm32"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Operating System :: OS Independent",
]
# Core has minimal deps. Optional groups pull in heavier model-format
# parsers; the FastAPI server, quantizers, and ONNX→TFLite chain live in
# the separate `darml-pro` package.
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
tflite  = ["tflite-runtime>=2.14.0", "numpy>=1.26.0"]
onnx    = ["onnx>=1.16.0"]
sklearn = ["joblib>=1.4.0", "scikit-learn>=1.4.0", "emlearn>=0.20.0", "setuptools>=68.0"]
build   = ["platformio>=6.1.0"]
all = [
    "tflite-runtime>=2.14.0",
    "numpy>=1.26.0",
    "onnx>=1.16.0",
    "joblib>=1.4.0",
    "scikit-learn>=1.4.0",
    "emlearn>=0.20.0",
    "setuptools>=68.0",
    "platformio>=6.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
darml = "darml.interfaces.cli.main:cli"

# [project.urls]
# Add Homepage / Repository / Issues / Documentation entries here once the
# linked pages actually exist. Empty links cause dead "Homepage" buttons on
# the PyPI project page, which signal an abandoned project.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# Strict package discovery — Core must NOT pick up the proprietary
# `darml-pro/` sibling directory.
#
# History: 0.1.0 and 0.1.1 wheels accidentally bundled the entire
# darml-pro/ tree because find_packages walked the hyphen-dir as a
# namespace and the include="darml*" pattern matched the inner
# darml_pro/ package. Fix:
#   - `namespaces = false`  → skip dirs without __init__.py
#                              (darml-pro/ has none; darml/ does)
#   - `where = ["."]`       → explicit root, no implicit src/ shenanigans
#   - exclude all variants  → defense in depth
# A CI test (tests/security/test_wheel_purity.py) asserts no darml_pro
# content reaches dist/.
[tool.setuptools.packages.find]
where      = ["."]
include    = ["darml", "darml.*"]
exclude    = [
    "darml_pro",        "darml_pro.*",
    "darml-pro",        "darml-pro.*",
    "tests",            "tests.*",
    "examples",         "examples.*",
    "scripts",          "scripts.*",
    "deploy",           "deploy.*",
    "landing",          "landing.*",
    "darml_pro_tests*",
]
namespaces = false

[tool.setuptools.package-data]
"darml.infrastructure.templates" = ["**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
